--- a/app/src/main/res/layout/gifsoundlinklayout.xml
+++ b/app/src/main/res/layout/gifsoundlinklayout.xml
@@ -1,17 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+
 
     <ImageView
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:id="@+id/previewImage"/>
 
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/linkTitle"/>
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/linkTitle"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/timeSubmittedAndAuthor"/>
+    </LinearLayout>
+
+    <ImageButton
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:id="@+id/viewRedditCommentsButton"
+        android:layout_gravity="right"
+        android:onClick="seeLinkComments"/>
 
 
 </LinearLayout>
