--- a/app/src/main/res/layout/fragment_gif_sound_view.xml
+++ b/app/src/main/res/layout/fragment_gif_sound_view.xml
@@ -6,6 +6,14 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="cpre388.gifsound.GifSoundViewFragment">
 
+    <FrameLayout
+        android:name="com.google.android.youtube.player.YouTubePlayerFragment"
+        android:id="@+id/youtube_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:visibility="visible" >
+    </FrameLayout>
 
 
 </RelativeLayout>
