Added a comments button to each row in the textView for each link. Need to now eventually have it display the actual comments from reddit.

--- a/app/src/main/res/layout/gifsoundlinklayout.xml
+++ b/app/src/main/res/layout/gifsoundlinklayout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -14,7 +14,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_toEndOf="@+id/previewImage">
 
         <TextView
             android:layout_width="wrap_content"
@@ -26,14 +27,15 @@
             android:id="@+id/timeSubmittedAndAuthor"/>
     </LinearLayout>
 
-    <!--
-    <ImageButton
+    <Button
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:id="@+id/viewRedditCommentsButton"
         android:layout_gravity="right"
-        android:onClick="seeLinkComments"/>
-        -->
+        android:focusable="false"
+        android:hint="comments"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
 
 
-</LinearLayout>
+</RelativeLayout>
