--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -16,7 +16,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            tools:listitem="@layout/gifsoundlinklayout" />
+            tools:listitem="@layout/gifsoundlinklayout"
+            android:focusable="true"/>
     </android.support.v4.widget.SwipeRefreshLayout>
 
 
