--- a/app/src/main/res/layout/activity_gif_sound_view.xml
+++ b/app/src/main/res/layout/activity_gif_sound_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:components="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -30,6 +31,8 @@
 
     <cpre388.gifsound.MovieView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:onClick="onGifClick"
+        custom:gif="@raw/test_gif"/>
 
 </LinearLayout>
