Added webview to display image but doesn't play the gif yet

--- a/app/src/main/res/layout/activity_gif_sound_view.xml
+++ b/app/src/main/res/layout/activity_gif_sound_view.xml
@@ -35,4 +35,9 @@
         android:onClick="onGifClick"
         custom:gif="@raw/test_gif"/>
 
+    <WebView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/web_image"/>
+
 </LinearLayout>
