Added intent stuff

--- a/app/src/main/res/layout/activity_gif_sound_view.xml
+++ b/app/src/main/res/layout/activity_gif_sound_view.xml
@@ -21,7 +21,7 @@
         android:autoLink="web" />
 
     <WebView
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/web_image"/>
 
