--- a/app/src/main/res/menu/menu_landing_page.xml
+++ b/app/src/main/res/menu/menu_landing_page.xml
@@ -1,5 +1,31 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".LandingPage">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" android:showAsAction="never" />
+    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"
+        android:orderInCategory="100" android:showAsAction="never" />-->
+    <item
+        android:showAsAction="ifRoom"
+        android:title="Sort">
+        <menu>
+            <item
+                android:title="@string/sort_hot" />
+            <item
+                android:title="@string/sort_new" />
+            <item
+                android:title="@string/sort_rising" />
+            <item
+                android:title="@string/sort_controversial" />
+            <item
+                android:title="@string/sort_top_hour" />
+            <item
+                android:title="@string/sort_top_24_hours" />
+            <item
+                android:title="@string/sort_top_week" />
+            <item
+                android:title="@string/sort_top_month" />
+            <item
+                android:title="@string/sort_top_year" />
+            <item
+                android:title="@string/sort_top_all_time" />
+        </menu>
+    </item>
 </menu>
